# Ais-travel-guide

./: Dockerfile  Flow.txt  README.md  app.py  app_gradio.py  constants.py  docker-compose.yaml  graph.py  main.py  pyproject.toml  requirement.txt  requirements.txt  state.py  users.json
.github/workflows/: ci.yaml
Chains/: destination_details.py  hotel_flight_search.py  main_agent.py  suggestion.py  text_summerization.py
Conditional_edges/: ce_main.py
MCP_Servers/: amadeus_cl.py  local_mcp_tools.py  weather_tavily_mcp_server.py
Nodes/: get_destination_details_node.py  hotel_flight_search_node.py  main_agent_node.py  suggestion_node.py  text_summerrizer_node.py
app/: app.py  auth.py  models.py  mongo.py
app/routers/: ai_chat_route.py  auth_route.py  destinations_route.py
utilities/: error_handlers.py
