[project]
name = "projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==3.2.2",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "gradio>=6.2.0",
    "langchain>=1.2.0",
    "langchain-groq>=1.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-tavily>=0.2.16",
    "langgraph>=1.0.5",
    "mcp>=1.25.0",
    "passlib==1.7.4",
    "pymongo>=4.16.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "uvicorn[standard]>=0.40.0",
]
